syntax = "proto3";
option java_multiple_files = true;

package com.trzewik.activemq.interfaces.grpc.information;

message  MessageRequest{
    string id = 1;
}

message MessageResponse {
    string message = 1;
}

service InformationStreamController {
    rpc open(MessageRequest) returns (stream MessageResponse);
}
